# vortexParticleSimulation

./: .gitignore  Cargo.toml  README.md
.github/workflows/: main.yml  rust.yml
cli/: Cargo.toml
cli/src/: config.rs  runner.rs
examples/: empty.json  vortex-ring-2000.json  vortex-ring-500.json  vortex-ring.json
rust/: Cargo.toml
rust/cli/: Cargo.toml
rust/cli/src/: config.rs  main.rs  runner.rs
rust/vortex-particle-simulation/: Cargo.toml
rust/vortex-particle-simulation/src/: configuration.rs  lib.rs  sim.rs
rust/vortex-particle-simulation/src/algebra/: point3.rs  vector3.rs
rust/vortex-particle-simulation/src/configuration/: empty.rs  vortexring.rs
rust/vortex-particle-simulation/src/sim/: uniformgrid.rs  vorton.rs
rust/vps/: Cargo.toml
rust/vps/src/: algebra.rs  algorithms.rs  configuration.rs  geometry.rs  lib.rs  output.rs  profiler.rs  sim.rs  simulation.rs
rust/vps/src/algebra/: point3.rs  vector3.rs
rust/vps/src/algorithms/: vorton_to_velocity.rs  vorton_to_velocity_simple.rs  vorton_to_velocity_tree.rs
rust/vps/src/algorithms/vorton_to_velocity_tree/: grid.rs
rust/vps/src/configuration/: empty.rs  vortexring.rs
rust/vps/src/geometry/: cube.rs  sphere.rs
rust/vps/src/output/: grid.rs  vorton_collection.rs
rust/vps/src/sim/: super_vorton.rs  uniformgrid.rs  vorton.rs
rust/wasm/: Cargo.toml  functions.js
rust/wasm/src/: camera.rs  lib.rs  parameters.rs  simulation.rs  solution.rs  solver.rs  viewer.rs
rust/wasm/src/camera/: camera.rs
rust/wasm/src/viewer/: camera.rs  main.rs  program_demo.rs  program_skybox.rs  program_vorton_render.rs  webgl.rs
vortex-particle-simulation/: Cargo.toml
vortex-particle-simulation/src/: configuration.rs  lib.rs  profiling.rs  sim.rs
vortex-particle-simulation/src/configuration/: vortexring.rs
www/: .eslintignore  .eslintrc.js  babel.config.js  jest.config.js  package.json  postcss.config.js  tailwind.config.js  vue.config.js
www/src/: App.spec.js  App.vue  main.js
www/src/components/: Breadcrumb.vue  ControlStyleSelect.vue  ErrorAlert.spec.js  ErrorAlert.vue  FooterSection.vue  JoyCon.vue  JoyConAnimation.vue  JoyConYawTilt.vue  LoadingAlert.spec.js  LoadingAlert.vue  PlayIcon.vue  Player.vue  RecordIcon.vue  RecordStopIcon.vue  SetupToolbar.vue  SimulationParametersAdjust.vue  Solver.vue  StopIcon.vue  ToggleWithLabelRight.vue  TouchIndicator.vue  TouchMarker.vue  Viewer.vue  ViewerRender.vue  VortexParticleSimulationScenario.vue  VortexParticleSimulationSimulationSetup.vue  VortexParticleSimulationVortexRingSetup.vue
www/src/components/SimulationParameters/: InitialConditions.spec.js  InitialConditions.vue  NumericsProperties.spec.js  NumericsProperties.vue  PhysicalProperties.spec.js  PhysicalProperties.vue
www/src/components/heroicons/: ArrowLeft.vue  ChevronRightIconSolid.vue  FastForward.vue  Reply.vue  Rewind.vue  homeiconoutline.vue  homeiconsolid.vue
www/src/pages/index/: App.vue  main.js
www/src/shared/components/: CalculateFps.vue  MediaRecorder.vue  ViewerPlayerControl.vue
www/src/shared/icons/: iconhelp.vue  iconplay.vue  iconrecord.vue  iconrewind.vue  iconsettings.vue  iconstop.vue
www/src/store/: gui.js
www/src/store/modules/: Configuration.js  Solver.js
www/src/utils/undoredo/: component.vue  store.js
www/src/workers/: Solver.js  Solver.spec.js  Solver.worker.js  SolverWebassembly.worker.js
www/tests/unit/: example.spec.js
