[package]
name = "vortex-particle-simulation"
version = "0.1.0"
authors = ["Julien de Charentenay <julien@charentenay.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
simple-error = "0.2"
serde = "1.0"
serde_json = "1.0"
nalgebra = {version = "0.25", features = ["serde-serialize"] }
