[package]
name = "cli"
version = "0.1.0"
authors = ["Julien de Charentenay <julien@charentenay.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4" }
serde_json = "1"
vortex-particle-simulation = { path = "../vps" }
