[package]
name = "vortex-particle-simulation"
version = "0.1.0"
authors = ["Julien de Charentenay <julien@charentenay.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
# nalgebra = {version = "0.25", features = ["serde-serialize"] }
num = "0.4"

