[package]
name = "wasm"
version = "0.1.0"
authors = ["Julien de Charentenay <julien@charentenay.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = "0.2"
# serde-wasm-bindgen = "0.1"
web-sys = { version = "0.3", features = ["console"] }

vortex-particle-simulation = { path = "../vortex-particle-simulation" }

