[package]
name = "wasm"
version = "0.1.0"
authors = ["Julien de Charentenay <julien@charentenay.me>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
js-sys = "0.3.51"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
futures = "0.3"
serde-wasm-bindgen = "0.5"
simple-error = "0.2"
uuid = { version = "0.8", features = ["serde", "wasm-bindgen", "v4"] }
# nanoid = "0.4"
nalgebra = "0.24"
bincode = "^1.3"

vortex-particle-simulation = { path = "../vps" }

[dependencies.web-sys]
version = "0.3"
features = [
  'Blob',
  'console',
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'HtmlImageElement',
  'ImageBitmap',
  'Performance',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'MouseEvent',
  'Touch',
  'TouchList',
  'TouchEvent',
  'WebGlBuffer',
  'WebGlVertexArrayObject',
  'WebGl2RenderingContext',
  'WebGlProgram',
  'WebGlShader',
  'WebGlUniformLocation',
  'WebGlTexture',
  'WheelEvent',
  'Window',
]

